update swagger groups
